change toggle menu icon

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto gap-5">
+                <ul class="navbar-nav ms-auto column-gap-5">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#">about</a>
+                        <a class="nav-link " aria-current="page" href="#about">about</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">resume</a>
+                        <a class="nav-link" href="#resume">resume</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">portfolio</a>
+                        <a class="nav-link" href="#portfolio">portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">blog</a>
+                        <a class="nav-link" href="#blog">blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">contact</a>
+                        <a class="nav-link" href="#contact">contact</a>
                     </li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
             <div class="banner__heading pt-1 text-center">
                 <h1 class="banner__main__heading pt-5 mb-5">rasel sharif</h1>
                 <h2 class="banner__sub__heading pb-5">
-                    I'm a <span>Responsive Web Designer</span>
+                    I'm a <span id="#element"></span>
                 </h2>
             </div>
             <div class="banner__icons">
@@ -114,7 +114,6 @@
                                     <div class="about__email">
                                         <h5>Email: </h5>
                                         <span>raselsharif9@gmail.com</span>
-
                                     </div>
                                 </div>
                                 <div class="col-12 col-lg-6">
@@ -873,6 +872,7 @@
         crossorigin="anonymous"></script>
     <!-- ======= fontawesome CDN link ============= -->
     <script src="https://kit.fontawesome.com/667aadf96a.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- ========= custom js ============== -->
     <script src="js/script.js"></script>
 </body>
