--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UalTfOIDQ7M"
+                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/UalTfOIDQ7M"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
