--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <div class="row mb-5">
                 <div class="col-12 ">
                     <ul class="list__main  d-flex gap-4 justify-content-center text-white">
-                        <li class="list__btn btn__active"" data-filter=" all">All</li>
+                        <li class="list__btn btn__active" data-filter="all">All</li>
                         <li class="list__btn" data-filter=".brand">Brand</li>
                         <li class="list__btn" data-filter=".design">Design</li>
                         <li class="list__btn" data-filter=".photos">Photos</li>
@@ -588,8 +588,8 @@
                 </div>
             </div>
             <!-- ========= portfolio gallery ======== -->
-            <div class="row row-gap-3">
-                <div class="col-12 col-sm-6 col-lg-4">
+            <div class="row row-gap-3 mixitup">
+                <div class="mix design col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
                             <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
@@ -600,7 +600,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="mix design col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
                             <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
@@ -611,7 +611,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="mix design col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
                             <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
@@ -622,7 +622,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="mix photos col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
                             <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
@@ -633,7 +633,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="mix brand col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
                             <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
@@ -644,7 +644,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="mix brand col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
                             <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
@@ -876,6 +876,8 @@
         crossorigin="anonymous"></script>
     <!-- ========= slick slider js ======= -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- ========== mixitup js =================== -->
+    <script src="js/mixitup.min.js"></script>
     <!-- ======= fontawesome CDN link ============= -->
     <script src="https://kit.fontawesome.com/667aadf96a.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
