--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- ========= slick slider css ========== -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <!-- ======== vanobox css ======== -->
+    <link rel="stylesheet" href="css/venobox.min.css">
     <!-- ======= custom css ========== -->
     <link rel="stylesheet" href="css/style.css">
     <!-- ========= responsive css =========== -->
@@ -117,7 +119,7 @@
                                 <div class="col-12 col-md-6 col-lg-6">
                                     <div class="about__email">
                                         <h5>Email: </h5>
-                                        <span>raselsharif9@gmail.com</span>
+                                        <span> <a href="mailto:raselsharif9@gmail.com">raselsharif9@gmail.com</a> </span>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6 col-lg-6">
@@ -179,7 +181,6 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="about__card">
                         <div class="card__logo">
-
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
                         <h4 class="card__heading">Design Trends</h4>
@@ -192,7 +193,7 @@
 
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
-                        <h4 class="card__heading">Design Trends</h4>
+                        <h4 class="card__heading">PSD to HTML</h4>
                         <p class="card__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -202,7 +203,7 @@
 
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
-                        <h4 class="card__heading">Design Trends</h4>
+                        <h4 class="card__heading">Figma to HTML</h4>
                         <p class="card__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -212,7 +213,7 @@
 
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
-                        <h4 class="card__heading">Design Trends</h4>
+                        <h4 class="card__heading">Fully Responsive</h4>
                         <p class="card__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -222,7 +223,7 @@
 
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
-                        <h4 class="card__heading">Design Trends</h4>
+                        <h4 class="card__heading">Free Customization</h4>
                         <p class="card__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -232,7 +233,7 @@
 
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
-                        <h4 class="card__heading">Design Trends</h4>
+                        <h4 class="card__heading">Delivery on time</h4>
                         <p class="card__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -339,13 +340,13 @@
                         <ul class="plan__list">
                             <li class="plan__list__text">Responsive web Design</li>
                             <li class="plan__list__text">Pixel Perfect Design</li>
-                            <li class="plan__list__text">SEO Frienly Degign</li>
+                            <li class="plan__list__text">SEO Frienly Code</li>
                             <li class="plan__list__text">5 Times Free Cusmization</li>
                             <li class="plan__list__text">Delivery Time 3-7 days</li>
                             <li class="plan__list__text">24/7 Support</li>
                         </ul>
                         <div class="about__cv me-0">
-                            <a href="#" class="cv__link">Download CV</a>
+                            <a href="#" class="cv__link">Buy now</a>
                         </div>
                     </div>
                 </div>
@@ -354,18 +355,18 @@
                         <div class="plan__logo">
                             <i class="fa-solid fa-droplet"></i>
                         </div>
-                        <h4 class="plan__heading">Standard</h4>
-                        <h5 class="plan__price">$5/3 Section</h5>
+                        <h4 class="plan__heading">Profesional</h4>
+                        <h5 class="plan__price">$10/3 Section</h5>
                         <ul class="plan__list">
                             <li class="plan__list__text">Responsive web Design</li>
                             <li class="plan__list__text">Pixel Perfect Design</li>
-                            <li class="plan__list__text">SEO Frienly Degign</li>
+                            <li class="plan__list__text">SEO Frienly Code</li>
                             <li class="plan__list__text">5 Times Free Cusmization</li>
-                            <li class="plan__list__text">Delivery Time 3-7 days</li>
+                            <li class="plan__list__text">Delivery Time 7-10 days</li>
                             <li class="plan__list__text">24/7 Support</li>
                         </ul>
                         <div class="about__cv me-0">
-                            <a href="#" class="cv__link">Download CV</a>
+                            <a href="#" class="cv__link">Buy now</a>
                         </div>
                     </div>
                 </div>
@@ -374,18 +375,18 @@
                         <div class="plan__logo">
                             <i class="fa-solid fa-droplet"></i>
                         </div>
-                        <h4 class="plan__heading">Standard</h4>
-                        <h5 class="plan__price">$5/3 Section</h5>
+                        <h4 class="plan__heading">Enterprice</h4>
+                        <h5 class="plan__price">Multipage/Contact for price</h5>
                         <ul class="plan__list">
                             <li class="plan__list__text">Responsive web Design</li>
                             <li class="plan__list__text">Pixel Perfect Design</li>
-                            <li class="plan__list__text">SEO Frienly Degign</li>
-                            <li class="plan__list__text">5 Times Free Cusmization</li>
-                            <li class="plan__list__text">Delivery Time 3-7 days</li>
+                            <li class="plan__list__text">SEO Frienly Code</li>
+                            <li class="plan__list__text">Unlimited Free Cusmization</li>
+                            <li class="plan__list__text">Delivery Time (Depend on project)</li>
                             <li class="plan__list__text">24/7 Support</li>
                         </ul>
                         <div class="about__cv me-0">
-                            <a href="#" class="cv__link">Download CV</a>
+                            <a href="#" class="cv__link">Buy now</a>
                         </div>
                     </div>
                 </div>
@@ -553,10 +554,14 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/UalTfOIDQ7M"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                    <div class="office__vedio">
+                        
+                        <a class="my-video-links" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/watch?v=h9jhHSx_MEQ">
+                            <div class="play__btn">
+                                <i class="fa-solid fa-play fa-xl" style="color: #009e66;"></i>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -673,7 +678,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center">
-                    <h4 class="display-4 text-white">Upcoming.......</h4>
+                    <!-- <h4 class="display-4 text-white">Upcoming.......</h4> -->
                 </div>
             </div>
 
@@ -807,7 +812,7 @@
                             </div>
                             <div class="row mb-4">
                                 <div class="col-lg-12">
-                                    <textarea name="" id="" cols="15" rows="10" placeholder="Message"
+                                    <textarea name="" id="" cols="" rows="5" placeholder="Message"
                                         class="form-control" required></textarea>
                                 </div>
                             </div>
@@ -834,29 +839,33 @@
                         </li>
                         <li class="info__main d-flex gap-4 align-items-center">
                             <div class="info__logo">
-                                <i class="fa-solid fa-diamond"></i>
+                                <i class="fa-solid fa-location-crosshairs"></i>
                             </div>
                             <div class="info__detail">
-                                <h6 class="info__name">Name</h6>
-                                <p class="info__title">Rasel Sharif</p>
+                                <h6 class="info__name">Location</h6>
+                                <p class="info__title">Dhaka, Bangladesh.</p>
                             </div>
                         </li>
                         <li class="info__main d-flex gap-4 align-items-center">
                             <div class="info__logo">
-                                <i class="fa-solid fa-diamond"></i>
+                                <i class="fa-solid fa-phone"></i>
                             </div>
                             <div class="info__detail">
-                                <h6 class="info__name">Name</h6>
-                                <p class="info__title">Rasel Sharif</p>
+                                <h6 class="info__name">Call me</h6>
+                                <p class="info__title">
+                                    <a href="tel:+8801961266829">+880 1961-266829</a>
+                                </p>
                             </div>
                         </li>
                         <li class="info__main d-flex gap-4 align-items-center">
                             <div class="info__logo">
-                                <i class="fa-solid fa-diamond"></i>
+                                <i class="fa-solid fa-paper-plane"></i>
                             </div>
                             <div class="info__detail">
-                                <h6 class="info__name">Name</h6>
-                                <p class="info__title">Rasel Sharif</p>
+                                <h6 class="info__name">Email Me</h6>
+                                <p class="info__title">
+                                    <a href="mailto:raselsharif9@gmail.com">raselsharif9@gmail.com</a>
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -878,6 +887,8 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <!-- ========== mixitup js =================== -->
     <script src="js/mixitup.min.js"></script>
+    <!-- ============ vanobox js =========== -->
+    <script src="js/venobox.min.js"></script>
     <!-- ======= fontawesome CDN link ============= -->
     <script src="https://kit.fontawesome.com/667aadf96a.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
