--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <div class="about__close close__btn">
                 <i class="fa-solid fa-xmark"></i>
             </div>
+            <!-- ============== about me ========== -->
             <div class="row pt-5">
                 <div class="common__heading col-12 text-center mb-5">
                     <p class="common__headin__title mb-4">Get to know me </p>
@@ -119,7 +120,8 @@
                                 <div class="col-12 col-md-6 col-lg-6">
                                     <div class="about__email">
                                         <h5>Email: </h5>
-                                        <span> <a href="mailto:raselsharif9@gmail.com">raselsharif9@gmail.com</a> </span>
+                                        <span> <a href="mailto:raselsharif9@gmail.com">raselsharif9@gmail.com</a>
+                                        </span>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6 col-lg-6">
@@ -170,6 +172,7 @@
                     </div>
                 </div>
             </div>
+            <!-- ================ abour our service ======== -->
             <div class="row">
                 <div class="common__heading col-12 mt-5">
                     <p class="common__headin__title mb-4">Services i offer to my clients</p>
@@ -238,6 +241,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- ============== cliens review ============  -->
             <div class="row">
                 <div class="common__heading col-12 mt-5">
                     <p class="common__headin__title mb-4">What my clients think about me</p>
@@ -259,8 +264,10 @@
                                 </div>
                             </div>
                             <div class="testi__para">
-                                Emma did an excellent creative job, addressing our request quickly, and also providing her
-                                own graphic insight, being open to feedback and changes or edits when they arose. She worked
+                                Emma did an excellent creative job, addressing our request quickly, and also providing
+                                her
+                                own graphic insight, being open to feedback and changes or edits when they arose. She
+                                worked
                                 with us the entire way. Highly recommended.
                             </div>
                         </div>
@@ -277,8 +284,10 @@
                                 </div>
                             </div>
                             <div class="testi__para">
-                                Emma did an excellent creative job, addressing our request quickly, and also providing her
-                                own graphic insight, being open to feedback and changes or edits when they arose. She worked
+                                Emma did an excellent creative job, addressing our request quickly, and also providing
+                                her
+                                own graphic insight, being open to feedback and changes or edits when they arose. She
+                                worked
                                 with us the entire way. Highly recommended.
                             </div>
                         </div>
@@ -295,8 +304,10 @@
                                 </div>
                             </div>
                             <div class="testi__para">
-                                Emma did an excellent creative job, addressing our request quickly, and also providing her
-                                own graphic insight, being open to feedback and changes or edits when they arose. She worked
+                                Emma did an excellent creative job, addressing our request quickly, and also providing
+                                her
+                                own graphic insight, being open to feedback and changes or edits when they arose. She
+                                worked
                                 with us the entire way. Highly recommended.
                             </div>
                         </div>
@@ -313,8 +324,10 @@
                                 </div>
                             </div>
                             <div class="testi__para">
-                                Emma did an excellent creative job, addressing our request quickly, and also providing her
-                                own graphic insight, being open to feedback and changes or edits when they arose. She worked
+                                Emma did an excellent creative job, addressing our request quickly, and also providing
+                                her
+                                own graphic insight, being open to feedback and changes or edits when they arose. She
+                                worked
                                 with us the entire way. Highly recommended.
                             </div>
                         </div>
@@ -322,6 +335,8 @@
                 </div>
                 <div class="testi__dots"></div>
             </div>
+
+            <!-- ========= our price plan  ========= -->
             <div class="row">
                 <div class="common__heading col-12 mt-5">
                     <p class="common__headin__title mb-4">Get started with my services</p>
@@ -361,7 +376,7 @@
                             <li class="plan__list__text">Responsive web Design</li>
                             <li class="plan__list__text">Pixel Perfect Design</li>
                             <li class="plan__list__text">SEO Frienly Code</li>
-                            <li class="plan__list__text">5 Times Free Cusmization</li>
+                            <li class="plan__list__text">10 Times Free Cusmization</li>
                             <li class="plan__list__text">Delivery Time 7-10 days</li>
                             <li class="plan__list__text">24/7 Support</li>
                         </ul>
@@ -400,13 +415,14 @@
             <div class="resume__close close__btn">
                 <i class="fa-solid fa-xmark"></i>
             </div>
+            <!-- =========== education and skill information ========= -->
             <div class="row">
                 <div class="common__heading col-12 text-center mb-5">
                     <p class="common__headin__title mb-4">Check out my Resume </p>
                     <h2 class="common__heding__head underline mb-5">Resume</h2>
-
                 </div>
             </div>
+
             <div class="row g-5 resume__area">
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="row">
@@ -417,30 +433,32 @@
                     <div class="row">
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Computer Science</h5>
-                                <p class="resume__card__details">Cambridge University / 2004 - 2007</p>
-                                <p class="resume__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Optio quo repudiandae.</p>
+                                <h5 class="resume__card__heading">BSc in CSE</h5>
+                                <p class="resume__card__details">Internation Open University / 2022 - Present</p>
+                                <p class="resume__description">I'm currently studying BSc in CSE a private university.
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Computer Science</h5>
-                                <p class="resume__card__details">Cambridge University / 2004 - 2007</p>
-                                <p class="resume__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Optio quo repudiandae.</p>
+                                <h5 class="resume__card__heading">Diploma</h5>
+                                <p class="resume__card__details">Rajdhani Polytechnic & textile college / 2015 - 2019
+                                </p>
+                                <p class="resume__description">I completed 4years diploma in CSE from a private college.
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Computer Science</h5>
-                                <p class="resume__card__details">Cambridge University / 2004 - 2007</p>
-                                <p class="resume__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Optio quo repudiandae.</p>
+                                <h5 class="resume__card__heading">Dakhil/SSC</h5>
+                                <p class="resume__card__details">HMAH Dakhil Madrasa / 2013-2014</p>
+                                <p class="resume__description">I completed Dakhil/SSC from a dakhil Madasa.</p>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- ======== my experience ============== -->
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="row">
                         <div class="resume__heading col-12">
@@ -450,31 +468,30 @@
                     <div class="row">
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Computer Science</h5>
-                                <p class="resume__card__details">Cambridge University / 2004 - 2007</p>
-                                <p class="resume__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Optio quo repudiandae.</p>
+                                <h5 class="resume__card__heading">Jr. Officer (IT)</h5>
+                                <p class="resume__card__details">Republic Insurance Company Ltd. / 2020 - Present</p>
+                                <p class="resume__description">I'm working here as a IT support engineer.</p>
                             </div>
                         </div>
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Computer Science</h5>
-                                <p class="resume__card__details">Cambridge University / 2004 - 2007</p>
-                                <p class="resume__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Optio quo repudiandae.</p>
+                                <h5 class="resume__card__heading">Asst. Officer (IT)</h5>
+                                <p class="resume__card__details">Max Clothing (BD) Ltd. / 2019 - 2020</p>
+                                <p class="resume__description">I was working there as a IT support engineer.</p>
                             </div>
                         </div>
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Computer Science</h5>
-                                <p class="resume__card__details">Cambridge University / 2004 - 2007</p>
-                                <p class="resume__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Optio quo repudiandae.</p>
+                                <h5 class="resume__card__heading">Web Desinger</h5>
+                                <p class="resume__card__details">Not yet working any office</p>
+                                <p class="resume__description">I'm now learning responsive web design.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <!-- ========= my skill ========== -->
             <div class="row pt-5">
                 <div class="common__heading col-12  mb-5">
                     <p class="common__headin__title mb-4">My level of knowledge in some tools</p>
@@ -485,78 +502,75 @@
             <div class="row row-gap-5">
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg"></div>
-                        <div class="skill__text">
+                        <div class="skill__bg" style="width: 90%;"></div>
+                        <div class="skill__text" style="width: 90%;">
                             <p>HTML/CSS</p>
-                            <p>95%</p>
+                            <p>90%</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg"></div>
-                        <div class="skill__text">
-                            <p>HTML/CSS</p>
-                            <p>95%</p>
+                        <div class="skill__bg" style="width: 90%;"></div>
+                        <div class="skill__text" style="width: 90%;">
+                            <p>Bootstrap</p>
+                            <p>90%</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg"></div>
-                        <div class="skill__text">
-                            <p>HTML/CSS</p>
-                            <p>95%</p>
+                        <div class="skill__bg" style="width: 0%;"></div>
+                        <div class="skill__text" style="width: 0%;">
+                            <p>Tailwind</p>
+                            <p>0%</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg"></div>
-                        <div class="skill__text">
-                            <p>HTML/CSS</p>
-                            <p>95%</p>
+                        <div class="skill__bg" style="width: 30%;"></div>
+                        <div class="skill__text" style="width: 30%;">
+                            <p>JS</p>
+                            <p>30%</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg"></div>
-                        <div class="skill__text">
-                            <p>HTML/CSS</p>
-                            <p>95%</p>
+                        <div class="skill__bg" style="width: 80%;"></div>
+                        <div class="skill__text" style="width: 80%;">
+                            <p>jQuery</p>
+                            <p>80%</p>
                         </div>
                     </div>
                 </div>
+               
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg"></div>
-                        <div class="skill__text">
-                            <p>HTML/CSS</p>
-                            <p>95%</p>
+                        <div class="skill__bg" style="width: 0%;"></div>
+                        <div class="skill__text" style="width: 0%;">
+                            <p>SASS</p>
+                            <p>0%</p>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <!-- ========== about my office ========= -->
             <div class="row pt-5">
                 <div class="col-12 col-lg-6">
                     <div class="skill__footer">
                         <h3 class="skill__footer__heading pb-4">Take a tour of my office</h3>
                         <div class="skill__footer__para">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia cum quasi assumenda culpa
-                            praesentium consectetur voluptatibus expedita. Voluptatem tempore, aspernatur rem facilis,
-                            distinctio nemo! Odio velit, nemo dolorem voluptas!
-                            <br> <br>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium qui aspernatur unde
-                            mollitia, in laborum.
+                            I don't have any office right now. Will be soon!
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="office__vedio">
-                        
-                        <a class="my-video-links" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/watch?v=h9jhHSx_MEQ">
+
+                        <a class="my-video-links" data-autoplay="true" data-vbtype="video"
+                            href="https://www.youtube.com/watch?v=h9jhHSx_MEQ">
                             <div class="play__btn">
                                 <i class="fa-solid fa-play fa-xl" style="color: #009e66;"></i>
                             </div>
@@ -812,8 +826,8 @@
                             </div>
                             <div class="row mb-4">
                                 <div class="col-lg-12">
-                                    <textarea name="" id="" cols="" rows="5" placeholder="Message"
-                                        class="form-control" required></textarea>
+                                    <textarea name="" id="" cols="" rows="5" placeholder="Message" class="form-control"
+                                        required></textarea>
                                 </div>
                             </div>
                             <div class="form__btn__main">
