add form validation and change logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <!-- ====== nav section start ============= -->
     <nav class="navbar navbar-expand-md" id="navbar">
         <div class="container py-3">
-            <a class="navbar-brand" href="#">RS</a>
+            <a class="navbar-brand" href="https://raselsharif.github.io/portfolio/">
+                <img height="60" width="100" src="images/mylogo.png" alt="logo" class="img-fluid">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -813,21 +815,32 @@
                         <form action="">
                             <div class="row mb-3">
                                 <div class="col-12 col-md-6 col-lg-6 contact__name">
-                                    <input type="text" placeholder="Name" class="form-control" required>
+                                    <input type="text" placeholder="Name" class="form-control name">
+                                    <div class="error">
+                                        <p class="error__msg name__err"></p>
+                                    </div>
                                 </div>
                                 <div class="col-12 col-md-6 col-lg-6">
-                                    <input type="email" placeholder="Email" class="form-control" required>
+                                    <input type="text" placeholder="Email" class="form-control email">
+                                    <div class="error">
+                                        <p class="error__msg mail__err"></p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <div class="col-lg-12">
-                                    <input type="text" placeholder="Subject" class="form-control" required>
+                                    <input type="text" placeholder="Subject" class="form-control subject">
+                                    <div class="error">
+                                        <p class="error__msg sub__err"></p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-4">
                                 <div class="col-lg-12">
-                                    <textarea name="" id="" cols="" rows="5" placeholder="Message" class="form-control"
-                                        required></textarea>
+                                    <textarea name="" id="" cols="" rows="5" placeholder="Message" class="form-control text"></textarea>
+                                    <div class="error">
+                                        <p class="error__msg text__err"></p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form__btn__main">
