add AOS js banner section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <!-- ======== vanobox css ======== -->
     <link rel="stylesheet" href="css/venobox.min.css">
+    <!-- =========== aos css ============== -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- ======= custom css ========== -->
     <link rel="stylesheet" href="css/style.css">
     <!-- ========= responsive css =========== -->
@@ -59,7 +61,7 @@
     <section id="banner">
         <div class="container">
             <div class="banner__heading pt-1 text-center">
-                <h1 class="banner__main__heading pt-5 mb-5">rasel sharif</h1>
+                <h1 class="banner__main__heading pt-5 mb-5" data-aos="fade-right"  data-aos-duration="1000">rasel sharif</h1>
                 <h2 class="banner__sub__heading pb-5">
                     I'm a <span id="myTitle"></span>
                 </h2>
@@ -923,6 +925,8 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- ======= smtp js ========= -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!-- ========= aos js ============== -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- ========= custom js ============== -->
     <script src="js/script.js"></script>
 </body>
