--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
 </head>
 
 <body>
+
+    <!-- ========= pre loader ========= -->
+    <div class="preloader__main">
+        <div class="preloader">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
     <!-- ====== nav section start ============= -->
     <nav class="navbar navbar-expand-md" id="navbar">
         <div class="container py-3">
@@ -94,13 +108,13 @@
     <!-- ============ banner section end ============= -->
 
     <!-- ============ about section start ============= -->
-    <section id="about" class="py-5 ">
+    <section id="about" class="pb-5 ">
         <div class="container">
             <div class="about__close close__btn">
                 <i class="fa-solid fa-xmark"></i>
             </div>
             <!-- ============== about me ========== -->
-            <div class="row pt-5">
+            <div class="row">
                 <div class="common__heading col-12 text-center mb-5">
                     <p class="common__headin__title mb-4">Get to know me </p>
                     <h2 class="common__heding__head underline mb-5">about me</h2>
@@ -418,7 +432,7 @@
     </section>
     <!-- ============ about section end ============= -->
     <!-- ============ resume section start ============= -->
-    <section id="resume" class="py-5">
+    <section id="resume" class="pb-5">
         <div class="container">
             <div class="resume__close close__btn">
                 <i class="fa-solid fa-xmark"></i>
@@ -591,7 +605,7 @@
     <!-- ============ resume section end ============= -->
 
     <!-- ============ portfolio section start ============= -->
-    <section id="portfolio" class="py-5">
+    <section id="portfolio" class="pb-5">
         <div class="container">
             <div class="portfolio__close close__btn">
                 <i class="fa-solid fa-xmark"></i>
@@ -687,7 +701,7 @@
     </section>
     <!-- ============ portfolio section end ============= -->
     <!-- ============ blog section start ============= -->
-    <section id="blog" class="py-5">
+    <section id="blog" class="pb-5">
         <div class="container">
             <div class="blog__close close__btn">
                 <i class="fa-solid fa-xmark"></i>
@@ -801,7 +815,7 @@
     <!-- ============ blog section end ============= -->
 
     <!-- ============ contact section start ============= -->
-    <section id="contact" class="py-5">
+    <section id="contact" class="pb-5">
         <div class="container">
             <div class="contact__close close__btn">
                 <i class="fa-solid fa-xmark"></i>
@@ -932,7 +946,7 @@
     <!-- ========= aos js ============== -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- ========= particle js ===== -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
     <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
     <!-- ========= custom js ============== -->
     <script src="js/script.js"></script>
