--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
                                 <div class="col-12 col-lg-12">
                                     <div class="row d-flex align-items-center">
                                         <div class="about__cv col-12 col-sm-6 col-lg-6">
-                                            <a href="#" class="cv__link">Download CV</a>
+                                            <a href="https://drive.google.com/file/d/1Id78nsUnko79J0GifSffCLpe5GGmGmMz/view?usp=drive_link"
+                                                target="_blank" class="cv__link">Download
+                                                CV</a>
                                         </div>
                                         <div class="about__icon__main col-12 col-sm-6 col-lg-6">
                                             <ul class="about__icon d-flex column-gap-3">
@@ -378,11 +380,11 @@
                             <li class="plan__list__text">24/7 Support</li>
                         </ul>
                         <div class="about__cv me-0">
-                            <a href="#" class="cv__link">Buy now</a>
+                            <a href="#contact" class="cv__link contact__links">Buy now</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class=" col-12 col-md-6 col-lg-4">
                     <div class="plan__card">
                         <div class="plan__logo">
                             <i class="fa-solid fa-droplet"></i>
@@ -398,11 +400,11 @@
                             <li class="plan__list__text">24/7 Support</li>
                         </ul>
                         <div class="about__cv me-0">
-                            <a href="#" class="cv__link">Buy now</a>
+                            <a href="#contact" class="cv__link contact__links">Buy now</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class=" col-12 col-md-6 col-lg-4">
                     <div class="plan__card">
                         <div class="plan__logo">
                             <i class="fa-solid fa-droplet"></i>
@@ -418,7 +420,7 @@
                             <li class="plan__list__text">24/7 Support</li>
                         </ul>
                         <div class="about__cv me-0">
-                            <a href="#" class="cv__link">Buy now</a>
+                            <a href="#contact" class="cv__link contact__links">Buy now</a>
                         </div>
                     </div>
                 </div>
@@ -435,8 +437,10 @@
             <!-- =========== education and skill information ========= -->
             <div class="row">
                 <div class="common__heading col-12 text-center mb-5">
-                    <p class="common__headin__title mb-4">Check out my Resume </p>
-                    <h2 class="common__heding__head underline mb-5">Resume</h2>
+                    <p class="common__headin__title mb-4">Check out my
+                        Resume </p>
+                    <h2 class="common__heding__head underline mb-5">
+                        Resume</h2>
                 </div>
             </div>
 
@@ -444,32 +448,47 @@
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="row">
                         <div class="resume__heading col-12">
-                            <h2 class="resume__heding__head ">Education</h2>
+                            <h2 class="resume__heding__head ">Education
+                            </h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">BSc in CSE</h5>
-                                <p class="resume__card__details">Internation Open University / 2022 - Present</p>
-                                <p class="resume__description">I'm currently studying BSc in CSE a private university.
+                                <h5 class="resume__card__heading">BSc in
+                                    CSE</h5>
+                                <p class="resume__card__details">
+                                    Internation Open University / 2022 -
+                                    Present</p>
+                                <p class="resume__description">I'm
+                                    currently studying BSc in CSE a
+                                    private university.
                                 </p>
                             </div>
                         </div>
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Diploma</h5>
-                                <p class="resume__card__details">Rajdhani Polytechnic & textile college / 2015 - 2019
+                                <h5 class="resume__card__heading">
+                                    Diploma</h5>
+                                <p class="resume__card__details">
+                                    Rajdhani Polytechnic & textile
+                                    college / 2015 - 2019
                                 </p>
-                                <p class="resume__description">I completed 4years diploma in CSE from a private college.
+                                <p class="resume__description">I
+                                    completed 4years diploma in CSE from
+                                    a private college.
                                 </p>
                             </div>
                         </div>
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Dakhil/SSC</h5>
-                                <p class="resume__card__details">HMAH Dakhil Madrasa / 2013-2014</p>
-                                <p class="resume__description">I completed Dakhil/SSC from a dakhil Madasa.</p>
+                                <h5 class="resume__card__heading">
+                                    Dakhil/SSC</h5>
+                                <p class="resume__card__details">HMAH
+                                    Dakhil Madrasa / 2013-2014</p>
+                                <p class="resume__description">I
+                                    completed Dakhil/SSC from a dakhil
+                                    Madasa.</p>
                             </div>
                         </div>
                     </div>
@@ -479,29 +498,42 @@
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="row">
                         <div class="resume__heading col-12">
-                            <h2 class="resume__heding__head ">Experience</h2>
+                            <h2 class="resume__heding__head ">Experience
+                            </h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Jr. Officer (IT)</h5>
-                                <p class="resume__card__details">Republic Insurance Company Ltd. / 2020 - Present</p>
-                                <p class="resume__description">I'm working here as a IT support engineer.</p>
+                                <h5 class="resume__card__heading">Jr.
+                                    Officer (IT)</h5>
+                                <p class="resume__card__details">
+                                    Republic Insurance Company Ltd. /
+                                    2020 - Present</p>
+                                <p class="resume__description">I'm
+                                    working here as a IT support
+                                    engineer.</p>
                             </div>
                         </div>
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Asst. Officer (IT)</h5>
-                                <p class="resume__card__details">Max Clothing (BD) Ltd. / 2019 - 2020</p>
-                                <p class="resume__description">I was working there as a IT support engineer.</p>
+                                <h5 class="resume__card__heading">Asst.
+                                    Officer (IT)</h5>
+                                <p class="resume__card__details">Max
+                                    Clothing (BD) Ltd. / 2019 - 2020</p>
+                                <p class="resume__description">I was
+                                    working there as a IT support
+                                    engineer.</p>
                             </div>
                         </div>
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
-                                <h5 class="resume__card__heading">Web Desinger</h5>
-                                <p class="resume__card__details">Not yet working any office</p>
-                                <p class="resume__description">I'm now learning responsive web design.</p>
+                                <h5 class="resume__card__heading">Web
+                                    Desinger</h5>
+                                <p class="resume__card__details">Not yet
+                                    working any office</p>
+                                <p class="resume__description">I'm now
+                                    learning responsive web design.</p>
                             </div>
                         </div>
                     </div>
@@ -511,7 +543,8 @@
             <!-- ========= my skill ========== -->
             <div class="row pt-5">
                 <div class="common__heading col-12  mb-5">
-                    <p class="common__headin__title mb-4">My level of knowledge in some tools</p>
+                    <p class="common__headin__title mb-4">My level of
+                        knowledge in some tools</p>
                     <h2 class="common__heding__head mb-5">My Skills</h2>
                     <div class="common__hading__underline"></div>
                 </div>
@@ -519,7 +552,8 @@
             <div class="row row-gap-5">
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg" style="width: 90%;"></div>
+                        <div class="skill__bg" style="width: 90%;">
+                        </div>
                         <div class="skill__text" style="width: 90%;">
                             <p>HTML/CSS</p>
                             <p>90%</p>
@@ -528,7 +562,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg" style="width: 90%;"></div>
+                        <div class="skill__bg" style="width: 90%;">
+                        </div>
                         <div class="skill__text" style="width: 90%;">
                             <p>Bootstrap</p>
                             <p>90%</p>
@@ -546,7 +581,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg" style="width: 30%;"></div>
+                        <div class="skill__bg" style="width: 30%;">
+                        </div>
                         <div class="skill__text" style="width: 30%;">
                             <p>JS</p>
                             <p>30%</p>
@@ -555,7 +591,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg" style="width: 80%;"></div>
+                        <div class="skill__bg" style="width: 80%;">
+                        </div>
                         <div class="skill__text" style="width: 80%;">
                             <p>jQuery</p>
                             <p>80%</p>
@@ -577,9 +614,11 @@
             <div class="row pt-5">
                 <div class="col-12 col-lg-6">
                     <div class="skill__footer">
-                        <h3 class="skill__footer__heading pb-4">Take a tour of my office</h3>
+                        <h3 class="skill__footer__heading pb-4">Take a
+                            tour of my office</h3>
                         <div class="skill__footer__para">
-                            I don't have any office right now. Will be soon!
+                            I don't have any office right now. Will be
+                            soon!
                         </div>
                     </div>
                 </div>
