added agenc website in portfolio

--- a/index.html
+++ b/index.html
@@ -652,15 +652,14 @@
                 <div class="col-12 ">
                     <ul class="list__main  d-flex gap-4 justify-content-center text-white">
                         <li class="list__btn btn__active" data-filter="all">All</li>
-                        <li class="list__btn" data-filter=".brand">Brand</li>
-                        <li class="list__btn" data-filter=".design">Design</li>
-                        <li class="list__btn" data-filter=".photos">Photos</li>
+                        <li class="list__btn" data-filter=".responsive">Responsive</li>
+                        <li class="list__btn" data-filter=".notResponsive">Not Responsive</li>
                     </ul>
                 </div>
             </div>
             <!-- ========= portfolio gallery ======== -->
             <div class="row row-gap-4 mixitup">
-                <div class="mix design col-12 col-sm-6 col-lg-4">
+                <div class="mix responsive col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
                             <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
@@ -671,56 +670,12 @@
                         </div>
                     </a>
                 </div>
-                <div class="mix design col-12 col-sm-6 col-lg-4">
+                <div class="mix responsive col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
-                            <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
+                            <img src="images/portfolio02.jpg" alt="portfolio image" class="img-fluid w-100">
                             <div class="portfolio__overly">
-                                <a href="https://raselsharif.github.io/cit-hw-responsive02-valentina/" target="_blank"
-                                    class="portfolio__link">Visit Website</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="mix design col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="potfolio__img__main">
-                        <div class="portfolio__img">
-                            <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
-                            <div class="portfolio__overly">
-                                <a href="https://raselsharif.github.io/cit-hw-responsive02-valentina/" target="_blank"
-                                    class="portfolio__link">Visit Website</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="mix photos col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="potfolio__img__main">
-                        <div class="portfolio__img">
-                            <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
-                            <div class="portfolio__overly">
-                                <a href="https://raselsharif.github.io/cit-hw-responsive02-valentina/" target="_blank"
-                                    class="portfolio__link">Visit Website</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="mix brand col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="potfolio__img__main">
-                        <div class="portfolio__img">
-                            <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
-                            <div class="portfolio__overly">
-                                <a href="https://raselsharif.github.io/cit-hw-responsive02-valentina/" target="_blank"
-                                    class="portfolio__link">Visit Website</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="mix brand col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="potfolio__img__main">
-                        <div class="portfolio__img">
-                            <img src="images/portfolio01.jpg" alt="portfolio image" class="img-fluid w-100">
-                            <div class="portfolio__overly">
-                                <a href="https://raselsharif.github.io/cit-hw-responsive02-valentina/" target="_blank"
+                                <a href="https://raselsharif.github.io/cit-hw-responsive01-agenc/" target="_blank"
                                     class="portfolio__link">Visit Website</a>
                             </div>
                         </div>
