remove github link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </a>
                     </li>
                     <li class="banner__items">
-                        <a href="https://github.com/raselsharif" target="_blank" class="banner__link">
+                        <a href="https://github.com/" target="_blank" class="banner__link">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </li>
@@ -179,7 +179,7 @@
                                                     </a>
                                                 </li>
                                                 <li class="about__items">
-                                                    <a href="https://github.com/raselsharif" target="_blank"
+                                                    <a href="https://github.com/" target="_blank"
                                                         class="banner__link">
                                                         <i class="fa-brands fa-github"></i>
                                                     </a>
