added black mode

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <!-- ========= pre loader ========= -->
-    <div class="preloader__main">
+    <!-- <div class="preloader__main">
         <div class="preloader">
             <span></span>
             <span></span>
@@ -38,7 +38,7 @@
             <span></span>
             <span></span>
         </div>
-    </div>
+    </div> -->
     <!-- ====== nav section start ============= -->
     <nav class="navbar navbar-expand-md" id="navbar">
         <div class="container py-3">
@@ -71,6 +71,7 @@
         </div>
     </nav>
     <!-- ====== nav section end ============= -->
+
     <!-- ============ banner section start ============= -->
     <section id="banner">
         <div class="container">
@@ -83,6 +84,9 @@
             </div>
             <div class="banner__icons">
                 <ul class="banner__link__items">
+                    <ul class="color__switch">
+                        <li id="white"></li>
+                    </ul>
                     <li class="banner__items">
                         <a href="https://www.facebook.com/raselsharif0/" target="_blank" class="banner__link">
                             <i class="fa-brands fa-square-facebook"></i>
@@ -179,8 +183,7 @@
                                                     </a>
                                                 </li>
                                                 <li class="about__items">
-                                                    <a href="https://github.com/" target="_blank"
-                                                        class="banner__link">
+                                                    <a href="https://github.com/" target="_blank" class="banner__link">
                                                         <i class="fa-brands fa-github"></i>
                                                     </a>
                                                 </li>
@@ -425,6 +428,7 @@
         </div>
     </section>
     <!-- ============ about section end ============= -->
+
     <!-- ============ resume section start ============= -->
     <section id="resume" class="pb-5">
         <div class="container">
@@ -932,6 +936,7 @@
     <!-- <script src="js/jquery.lineProgressbar.js"></script> -->
     <!-- ========= custom js ============== -->
     <script src="js/script.js"></script>
+    <script src="js/colorSwicher.js"></script>
 </body>
 
 </html>
