--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- ========= responsive css =========== -->
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/white-mode.css">
 </head>
 
 <body>
