added pre loader

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
     <!-- ========= pre loader ========= -->
-    <!-- <div class="preloader__main">
+    <div class="preloader__main">
         <div class="preloader">
             <span></span>
             <span></span>
@@ -39,7 +39,7 @@
             <span></span>
             <span></span>
         </div>
-    </div> -->
+    </div>
     <!-- ====== nav section start ============= -->
     <nav class="navbar navbar-expand-md" id="navbar">
         <div class="container py-3">
